--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,6 @@
-argon2-cffi
-argon2-cffi-bindings
-asgiref
-bcrypt
-certifi
-cffi
-charset-normalizer
-Django
-et-xmlfile
-google-search-results
-idna
-numpy
-openpyxl
-pandas
-pillow
-pycparser
-python-dateutil
-pytz
-requests
-serpapi
-six
-sqlparse
-typing_extensions
-tzdata
-urllib3
+asgiref==3.6.0
+Django==4.1.5
+python-dateutil==2.8.2
+six==1.16.0
+sqlparse==0.4.3
+tzdata==2022.7
